[tool.poetry]
name = "corded-logger"
version = "1.0.0"
description = "A Discord webhook logger for Corded"
authors = ["vcokltfre <vcokltfre@gmail.com>"]
readme = "README.md"
packages = [{ include = "corded/logging" }]

[tool.poetry.dependencies]
python = "^3.8"
corded = "^1.3.8"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
